<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.drawer.Drawer">

    <com.damrad.multimediacenter.ui.drawer.DrawerView
        android:id="@+id/myDrawerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center">

            <Button
                android:id="@+id/brush"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_brush"
                android:drawablePadding="4dp"
                android:drawableTint="@android:color/white"
                android:foregroundGravity="center"
                android:text="@string/brush" />

            <Button
                android:id="@+id/pen"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_pen"
                android:drawablePadding="4dp"
                android:drawableTint="@android:color/white"
                android:text="@string/pen" />

            <Button
                android:id="@+id/roller"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_format_paint"
                android:drawablePadding="4dp"
                android:drawableTint="@android:color/white"
                android:text="@string/roller" />

            <Button
                android:id="@+id/colorPalete"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_color_lens"
                android:drawablePadding="4dp"
                android:drawableTint="@android:color/white"
                android:text="@string/color" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>